@@ -1,3 +1,9 @@
+2008-12-08  Scott Ellington  <scott.ellington@gmail.com>
+
+	* Layer.cs:
+	* Drawing/MapDrawer.cs:
+	* Xml/Serialization/MapSerializer.cs: add layer.Visible
+
 2008-12-05  Scott Ellington  <scott.ellington@gmail.com>
 
 	* Drawing/MapDrawer.cs: add a polyline labelling algorithm
